--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,98 @@
-/* Add CSS styling here */
+* {
+    box-sizing: border-box; 
+    max-width: 100%;
+} 
+html {
+    font-size: 62.5%; 
+} 
+body {
+    font-family: 'Vollkorn', serif;
+    font-size: 2rem;
+}
+h1, h2 {
+    font-family: 'Parisienne', cursive;
+    font-size: 5rem;
+    text-align: center;
+}
+h1 {
+    margin: 2% 0;
+}
+h2 {
+    text-transform: capitalize;
+}
+section p {
+    margin: 2% 5%;
+}
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+a {
+    text-decoration: none;
+    padding: 1% 2%;
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+}
+/* STYLE FOR about / contact / projects PAGES */
+/* STYLE FOR about / contact / projects PAGES */
+/* STYLE FOR about / contact / projects PAGES */
+.current {
+    background-color: black;
+    color: white;
+}
+.mainbox {
+    /* border: 1px solid black; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.mainbox-visible {
+    border: 1px solid black;
+    margin: 1%;
+    background-color: seagreen;
+    height: 50vh;
+}
+.funbox {
+    width: 100%;
+    display: flex;
+    margin-bottom: 1%;
+}
+.funbox-child {
+    display:flex;
+    width: 60%;
+}
+    .funbox-child > div {
+        border: 1px solid black;
+        width: 25%;
+        padding: 0;
+        margin: 1%;
+    }
+    .funbox-child1 {
+        background-color: antiquewhite;
+    }
+    .funbox-child2 {
+        background-color: powderblue;
+    }
+    .funbox-child3 {
+        background-color: palevioletred;
+    }
+    .funbox-child4 {
+    background-color: lightgrey;
+    }
+.funbox-child-friend {
+    width: 40%;
+    margin: 0 auto;
+    padding: 3%;
+}
+.funbox-child-friend p {
+    margin-top: 15vh;
+    margin-bottom: 15vh;
+}
+footer {
+    background: linear-gradient(35deg, #ccffff, #ffcccc);
+}
+footer nav {
+    padding: 5% 0;
+}
