--- a/style/index.css
+++ b/style/index.css
@@ -18,6 +18,7 @@ h1 {
     margin: 2% 0;
 }
 h2 {
+    margin: 7% 0;
     text-transform: capitalize;
 }
 section p {
@@ -41,6 +42,9 @@ a {
 .current {
     background-color: black;
     color: white;
+}
+a:hover {
+    background: linear-gradient(-35deg, #ccffff, #ffcccc);
 }
 .mainbox {
     /* border: 1px solid black; */
