--- a/style/index.css
+++ b/style/index.css
@@ -15,7 +15,7 @@ h1, h2 {
     text-align: center;
 }
 h1 {
-    margin: 2% 0;
+    margin: 1% 0;
 }
 h2 {
     margin: 7% 0;
@@ -35,13 +35,6 @@ a {
     background-color: white;
     border: 1px solid black;
     color: black;
-}
-/* STYLE FOR about / contact / projects PAGES */
-/* STYLE FOR about / contact / projects PAGES */
-/* STYLE FOR about / contact / projects PAGES */
-.current {
-    background-color: black;
-    color: white;
 }
 a:hover {
     background: linear-gradient(-35deg, #ccffff, #ffcccc);
@@ -99,4 +92,32 @@ footer {
 }
 footer nav {
     padding: 5% 0;
+    background: linear-gradient(35deg, #ccffff, #ffcccc);
+    background-color: blanchedalmond;
+}
+/* STYLE FOR about / contact / projects PAGES */
+/* STYLE FOR about / contact / projects PAGES */
+/* STYLE FOR about / contact / projects PAGES */
+.current {
+    background-color: black;
+    color: white;
+}
+.current:hover {
+    color: black;
+}
+/* To keep the footer in place */
+/* To keep the footer in place */
+/* To keep the footer in place */
+#everything {
+    position: relative;
+    min-height: 100vh;
+}
+#not-footer {
+    padding-bottom: 2.5rem; /* match */
+}
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem; /* match */
 }
