Added a Project page

--- a/style/about.css
+++ b/style/about.css
@@ -14,3 +14,17 @@ h2 {
     font-family: 'Caveat', cursive;
     font-size: 3rem;
 }
+.para a {
+    border: none;
+    background: transparent;
+}
+.para a:hover {
+    border-radius: 10px;
+    border: 1px solid black;
+    background: linear-gradient(-35deg, #ccffff, #ffcccc);
+}
+.ctrpls {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
