--- a/style/index.css
+++ b/style/index.css
@@ -125,3 +125,20 @@ footer nav {
     width: 100%;
     height: 2.5rem; /* match */
 }
+/* ICONS */
+/* ICONS */
+/* ICONS */
+.fa {
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    margin: 0;
+    /* color: black; */
+    background-color: transparent;
+    text-align: center;
+    line-height: 4rem;
+    border: none;
+  }
+  .fa:hover {
+      opacity: 0.7;
+  }
