--- a/style/index.css
+++ b/style/index.css
@@ -140,13 +140,18 @@ footer nav {
 /* ICONS */
 /* ICONS */
 /* ICONS */
+footer nav {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    background: none;
+}
 .fa {
-    width: 20px;
-    height: 20px;
+    background: transparent;
     padding: 0;
     margin: 0;
-    /* color: black; */
-    background-color: transparent;
     text-align: center;
     line-height: 4rem;
     border: none;
