--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,15 @@
-/* Stretch: CSS animations */
+/* Unit 1
+    [X] Stretch: CSS animations 
+    [X] Stretch: https://user-interface-ii.netlify.app
+*/
+
+/* Unit 2: 
+    [x] Insert a viewport meta tag into the head of the project with these html attributes: content="width=device-width, initial-scale=1"
+    [x] Introduce max-width media queries into your project at 800px and 500px
+    [ ] Add accessability features to your webpage
+    [ ] Design should closely follow the mobile wireframe given for your chosen layout
+*/
+
 * {
     box-sizing: border-box; 
     max-width: 100%;
