Updated old readme, added more color to about/contact/project, added a neat thing to @media 500px on the index

--- a/style/about.css
+++ b/style/about.css
@@ -38,4 +38,16 @@ main p {
 
 .vh-2pages {
     height: 70vh;
+    line-height: 10rem;
+}
+
+/* revision */ 
+
+.footer-different {
+    background: #FFAEBC;
+}
+
+.favoritecolor {
+    background: linear-gradient(-35deg, #A0E7E5, #FFAEBC,#A0E7E5);
+}
 }
