--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,7 @@
 /* Unit 2: 
     [x] Insert a viewport meta tag into the head of the project with these html attributes: content="width=device-width, initial-scale=1"
     [x] Introduce max-width media queries into your project at 800px and 500px
-    [ ] Add accessability features to your webpage
+    [x] Add accessability features to your webpage
     [ ] Design should closely follow the mobile wireframe given for your chosen layout
 */
 
@@ -38,7 +38,7 @@ h1, h2 {
     text-align: center;
 }
 h1 {
-    margin: 1% 0;
+    padding: 1% 0;
 }
 h2 {
     margin: 7% 0;
@@ -174,7 +174,7 @@ footer nav {
 footer nav {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 20rem;
     margin: 0 auto;
     text-align: center;
     background: none;
@@ -187,6 +187,62 @@ footer nav {
     line-height: 4rem;
     border: none;
 }
-    .fa:hover {
-    opacity: 0.7;
+
+footer nav a:hover, .ctrpls a:hover {
+    background: #ffcccc;
+    border-radius: 10px;
+    box-shadow: 4px 4px 10px #ccffff;
+    border-color: palevioletred;
+}
+
+
+/* MEDIA INQUIRIES */ 
+/* MEDIA INQUIRIES */ 
+/* MEDIA INQUIRIES */ 
+
+
+@media (max-width: 800px) {
+    .funbox-child {
+        display: none;
+    }
+    .funbox-child-friend {
+        width: 100%;
+    }
+    .funbox-child-friend p {
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+    }
+    header nav {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+/*  GENERAL ADJUSTMENTS:
+    - changed the background of about / contact / project to be a gradient
+    - changed the footer a:hover to be more similar to an iMessage
+
+    TOP: 
+        header nav a - width is now 100%
+        the 4 images lined up in a row on the index is hidden in 800px view
+
+    BOTTOM: 
+        div image consumes the background at 60% opacity for readable text and removal of images that serve no purpose aside from design
+*/
+
+@media (max-width: 500px) {
+    .mainbox-visible {
+        width: 100%;
+        border-radius: 0;
+        z-index: -1;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        overflow: hidden;
+        opacity: 50%;
+        margin: 0;
+        padding: 0;
+    }
 }
